--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Learning HTML Canvas</title>
 </head>
 <body>
-
+    <script type="text/javascript" src="../js/require.js"></script>
 </body>
 </html>
