--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
     <title>Learning HTML Canvas</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/main.css">
 </head>
 <body>
-    <script type="text/javascript" src="../js/require.js"></script>
+    <script type="text/javascript" src="resources/js/require.js"></script>
 </body>
 </html>
