lets start quick and dirty

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Learning HTML Canvas</title>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css">
 </head>
+    <canvas id="paintarea"></canvas>
 <body>
-    <script type="text/javascript" src="resources/js/require.js"></script>
+    <script src="resources/js/canvas.js"></script>
+    <script src="steps/basic-shape/shapes.js"></script>
 </body>
 </html>
