lets use requirejs from the start

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
     <canvas id="paintarea"></canvas>
 <body>
-    <script src="resources/js/canvas.js"></script>
-    <script src="steps/basic-shape/shapes.js"></script>
+    <script data-main="resources/js/canvas.js" src="resources/js/require.js"></script>
 </body>
 </html>
