--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Learning HTML Canvas</title>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css">
 </head>
-    <canvas id="paintarea"></canvas>
+    <canvas id="paintarea" width="400" height="400"></canvas>
 <body>
     <script data-main="resources/js/canvas.js" src="resources/js/require.js"></script>
 </body>
