--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
     <canvas id="paintarea" width="600" height="600"></canvas>
 <body>
-    <script data-main="scripts/canvas.js" src="resources/js/require.js"></script>
+    <script data-main="resources/js/main.js" src="resources/js/require.js"></script>
 </body>
 </html>
