--- a/tests/test.html
+++ b/tests/test.html
@@ -2,6 +2,15 @@
 <head>
     <title>Test Kanfas</title>
     <link rel="stylesheet" type="text/css" href="../components/jasmine/lib/jasmine-core/jasmine.css"></link>
+    <style type="text/css">
+        #HTMLReporter{
+            z-index: 1000;
+            position:absolute;
+            top:0;
+            left:0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <canvas id="testcanvas" width="600" height="600"></canvas>
