--- a/tests/test.html
+++ b/tests/test.html
@@ -29,7 +29,8 @@
 
         requirejs([
             "domReady!",
-            "./specs/kanfas.specs.js"
+            "./specs/kanfas.specs.js",
+            "./specs/state.specs.js"
             ],
         function(document) {
             jasmine.getEnv().addReporter(
