--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <h1>Crazy Balls Experiment</h1>
     <canvas id="foreground" width="600px" height="600px"></canvas>
     <canvas id="background" width="600px" height="600px"></canvas>
     <script src="components/requirejs/require.js" data-main="main.js"></script>
