--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Crazy Balls Experiment</h1>
     <canvas id="foreground" width="600px" height="600px"></canvas>
     <canvas id="background" width="600px" height="600px"></canvas>
-    <script src="components/requirejs/require.js" data-main="main.js"></script>
+    <script type="text/javascript" src="main-built.js"></script>
 </body>
 </html>
